2004-03-16  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/playmidi.c:
	  Bug fix.

2004-03-15  Saito <saito@intaa.net>

	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
	  Support for GS LCD in Win32GUI interface.

2004-03-14  Saito <saito@intaa.net>

	* timidity/readmidi.c, timidity/reverb.[ch]:
	  Support for effect: Auto Wah (incomplete).

2004-03-13  Saito <saito@intaa.net>

	* timidity/reverb.[ch]:
	  Beautify.

2004-03-12  Saito <saito@intaa.net>

	* timidity/reverb.c:
	  Fix around effects.

2004-03-10  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c:
	  Fixed an old bug preventing from specifying "pan=left" in config.

2004-03-10  Saito <saito@intaa.net>

	* timidity/readmidi.c, timidity/reverb.[ch], timidity/tables.[ch]:
	  Support for effect: Lo-Fi (incomplete), Stereo-EQ.
	* timidity/playmidi.c:
	  Fix around effects.

2004-03-08  Saito <saito@intaa.net>

	* timidity/playmidi.c:
	  Fix bug of adjust_panning().
	* interface/w32g_res.{h,rc}, interface/w32g_pref.c:
	  Add "Edit" button to preference window.

2004-03-08  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (midi_program_change): #if 0 out the useless
	  -1 check, formally was a kluge for XG emulation.

2004-03-07  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Fixed GM2 drumch on program change.

2004-03-07  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (midi_program_change): Fix for a drum
	  channel turns back into a melody channel

2004-03-07  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (note_off): Fix for remapped drum.

2004-03-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/ja_JP.ujis: Move to ja_JP.eucJP
	* doc/C/timidity.cfg.5, doc/ja_JP.eucJP/timidity.cfg.5: Update

2004-03-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c (select_play_sample):
	  Fix handling of resample cache in case of using MTS

2004-03-06  Saito <saito@intaa.net>
