@@ -193,6 +193,8 @@ typedef struct {
 	char dummy[1024];
 
 	int8 GSLCD[16][16];
+	double gslcd_last_display_time;
+	int8 gslcd_displayed_flag;
 } PanelInfo;
 extern PanelInfo *Panel;
 
