@@ -1,3 +1,8 @@
+2004-03-17  Saito <saito@intaa.net>
+
+	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
+	  Fix GS LCD in Win32GUI interface.
+
 2004-03-16  Saito <saito@intaa.net>
 
 	* timidity/reverb.c, timidity/playmidi.c:
